ui/apps/themes/components/launcher.less
/* ... */
.launcher-dropdown.dropdown-menu {

    padding: @launcher-outer-spacing;
    width: @launcher-vertical-amount * (@launcher-size  + @launcher-spacing * 2) + @launcher-outer-spacing *2 + 2;

    .smartphone & {
        width: 100% !important;
        left: 0px !important;
        right: 0px !important;
        height: auto !important;
        top: @appcontrol-height-smartphone !important;
        max-height: 90%;
        -webkit-overflow-scrolling: touch;
    }

    li {
        float: left;

        //.smartphone & { float: initial; }

        .fa { width: auto; }
        a:focus {
            i, .title { color: #fff; }
            outline: 0;
        }
    }

    .lcell {
        display: flex;
        flex-direction: column;
        align-items: center;
        position: relative;
        white-space: normal;

        margin: @launcher-spacing;
        height: @launcher-size;
        width: @launcher-size;

        svg.indicator { display: none; }

        .closer {
            font-size: 15px;
            color: #666;
            height: 42px;
        }

        .smartphone & {
            width: ~"calc(100vw/3 - 8px)";
            padding: 0;
            margin: 0;
        }

        cursor: pointer;

        .title {
            color: @launcher-fg;
            font-size: @launcher-text-size;
            text-align: center;
            width: @launcher-size;
            margin-bottom: 7px;
            .smartphone & {
                font-size: 14px;
                top: 70%;
                overflow: hidden;
                text-overflow: ellipsis;
                width: 100%;
                // to make ellipsis actually work (test with open mail compose and long subject)
                display: block;
                white-space: nowrap;
            }
            .flex-center(row);
            &.upsell i {
                margin-left: 4px;
                color: #ffc107;
                font-size: 14px;
                top: 0;
            }
        }
        .badge {
            position: absolute;
            top: 43%;
            right: 17%;
            font-size: 9px;
            z-index: 1;
            background-color: @launcher-badge-color;
        }
        .icon {
            width: @svg-wrap-size;
            flex: 1;
            // no icons on smartphone as it is a dropdown there

        }

        svg, i {
            position: relative;
            //top: -10px;
            //height: 100%;
            //width: 100%;
            top: 10px;
            font-size: 36px;
            color: @app-color-standard;
            overflow: visible;
            /*.smartphone & {
                // top: -10px;

                // for FA icons
                top: auto;
                line-height: 42px;
                font-size: 24px;
            }*/
            // overwrite stroke colors if coloredicons are configured
            &.colored {
                &.app-icon-mail {
                    color: @app-color-mail;
                    .stroke-c1 { stroke: @app-color-mail; }
                    .fill-c1 { fill: @app-color-mail; }
                }
                &.app-icon-calendar {
                    color: @app-color-calendar;
                    .stroke-c1 { stroke: @app-color-calendar; }
                    .fill-c1 { fill: @app-color-calendar; }
                }
                &.app-icon-addressbook {
                    color: @app-color-addressbook;
                    .stroke-c1 { stroke: @app-color-addressbook; }
                    .fill-c1 { fill: @app-color-addressbook; }
                }
                &.app-icon-drive {
                    color: @app-color-drive;
                    .stroke-c1 { stroke: @app-color-drive; }
                    .fill-c1 { fill: @app-color-drive; }
                }
                &.app-icon-tasks {
                    color: @app-color-tasks;
                    .stroke-c1 { stroke: @app-color-tasks; }
                    .fill-c1 { fill: @app-color-tasks; }
                }
                &.app-icon-portal {
                    color: @app-color-portal;
                    .stroke-c1 { stroke: @app-color-portal; }
                    .fill-c1 { fill: @app-color-portal; }
                }
                &.app-icon-text {
                    color: @app-color-text;
                    .stroke-c1 { stroke: @app-color-text; }
                    .fill-c1 { fill: @app-color-text; }
                }
                &.app-icon-spreadsheet {
                    color: @app-color-spreadsheet;
                    .stroke-c1 { stroke: @app-color-spreadsheet; }
                    .fill-c1 { fill: @app-color-spreadsheet; }
                }
                &.app-icon-presentation {
                    color: @app-color-presentation;
                    .stroke-c1 { stroke: @app-color-presentation; }
                    .fill-c1 { fill: @app-color-presentation; }
                }
            }

            .stroke-c1 { stroke: @launcher-fg; }
            .fill-none { fill: none;   }
            .fill-c1   { fill: @launcher-fg; }
            .stroke-w1 {
                stroke-width: @launcher-stroke-width;
                .retina & {
                    stroke-width: @launcher-stroke-width-retina;
                }
            }

        }

    }
    button.lcell {
        background: @launcher-bg;
        &:focus, &:hover {
            .stroke-c1 { stroke: @launcher-fg-hover }
            .fill-c1 { fill: @launcher-fg-hover }
            background: @launcher-bg-hover;
        }
    }
}

#io-ox-launchgrid-overlay {
    z-index:11;
    display:none;
    background-color: rgba(255, 255, 255, 0.01);
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    top: @appcontrol-height;
    &.open { display:block; }
    .smartphone & {
         top: @appcontrol-height-smartphone;
    }
}
/* ... */

